# centurion

./: .gitignore  README.md  pyproject.toml
.claude/agents/: centurion-dynamic-analyst.md  centurion-static-analyst.md  centurion-triage.md
.claude/skills/centurion-dynamic-analysis/: SKILL.md
.claude/skills/centurion-ios-recon/: SKILL.md
.claude/skills/centurion-network-intercept/: SKILL.md
.claude/skills/centurion-recon/: SKILL.md
.claude/skills/centurion-static-analysis/: SKILL.md
docs/superpowers/plans/: 2026-06-11-centurion-phase1.md  2026-06-11-centurion-phase2a.md  2026-06-12-centurion-phase2b.md  2026-06-12-centurion-phase3a.md  2026-06-12-centurion-phase3b.md  2026-06-12-centurion-phase4.md
docs/superpowers/specs/: 2026-06-11-centurion-phase2-design.md  2026-06-11-centurion-toolkit-design.md  (+1 more)
src/centurion/: __init__.py  install.py  models.py  process.py  registry.py  session.py
tests/: test_aapt2.py  test_adapter_base.py  test_adb.py  test_apkid.py  test_apkleaks.py  test_apksigner.py  test_apktool.py  test_classdump.py  test_cli.py  test_dex2jar.py  test_drozer.py  test_frida.py  test_frida_ios_dump.py  test_gitleaks.py  test_idevice.py  test_ideviceinstaller.py  test_install.py  test_ios_ipa.py  test_jadx.py  test_ldid.py  test_mcp_server.py  test_mitmproxy.py  test_models.py  test_nm.py  test_objection.py  test_opengrep.py  test_otool.py  test_process.py  test_process_manager.py  test_radare2.py  test_registry.py  test_scrcpy.py  test_script_library.py  test_semgrep.py  test_session.py  test_strings.py  test_tcpdump.py
(+42 files in other folders)
