[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centurion"
version = "0.1.0"
description = "Mobile QA + pentest toolkit wrapping OWASP MASTG tools, with a Claude Code MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
centurion = "centurion.cli.app:app"
centurion-mcp = "centurion.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/centurion"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
